# Programacion_II

./: .breakpoints  .gitignore  177685_P2P23  177685_P2P23.c  CMakeLists.txt  CMakelist.txt  COMO COMPILAR.md  Makefile  README.md  replit.nix  test.c  zonas.cfg
.ccls-cache/@@home@runner@ProgramacionII/: @nix@store@4m98bsvjh538p292pr4604313mjmnpc5-clang-12.0.1-lib@lib@clang@12.0.1@include@stdarg.h.blob  @nix@store@4m98bsvjh538p292pr4604313mjmnpc5-clang-12.0.1-lib@lib@clang@12.0.1@include@stddef.h.blob  @nix@store@9nk3g2bxwcsb3xhj6kav3bc7w9y45ycp-clang-13.0.1-lib@lib@clang@13.0.1@include@stdarg.h.blob  @nix@store@9nk3g2bxwcsb3xhj6kav3bc7w9y45ycp-clang-13.0.1-lib@lib@clang@13.0.1@include@stddef.h.blob  @nix@store@9nk3g2bxwcsb3xhj6kav3bc7w9y45ycp-clang-13.0.1-lib@lib@clang@13.0.1@include@stdint.h.blob  @nix@store@dwsi3wsqpqm0hpzdm9fsxc7q732p9xwi-glibc-2.34-210-dev@include@bits@floatn-common.h.blob  @nix@store@dwsi3wsqpqm0hpzdm9fsxc7q732p9xwi-glibc-2.34-210-dev@include@bits@floatn.h.blob  @nix@store@dwsi3wsqpqm0hpzdm9fsxc7q732p9xwi-glibc-2.34-210-dev@include@bits@libc-header-start.h.blob  @nix@store@dwsi3wsqpqm0hpzdm9fsxc7q732p9xwi-glibc-2.34-210-dev@include@bits@long-double.h.blob  @nix@store@dwsi3wsqpqm0hpzdm9fsxc7q732p9xwi-glibc-2.34-210-dev@include@bits@stdint-intn.h.blob  @nix@store@dwsi3wsqpqm0hpzdm9fsxc7q732p9xwi-glibc-2.34-210-dev@include@bits@stdint-uintn.h.blob  @nix@store@dwsi3wsqpqm0hpzdm9fsxc7q732p9xwi-glibc-2.34-210-dev@include@bits@stdio_lim.h.blob  @nix@store@dwsi3wsqpqm0hpzdm9fsxc7q732p9xwi-glibc-2.34-210-dev@include@bits@time64.h.blob  @nix@store@dwsi3wsqpqm0hpzdm9fsxc7q732p9xwi-glibc-2.34-210-dev@include@bits@timesize.h.blob  @nix@store@dwsi3wsqpqm0hpzdm9fsxc7q732p9xwi-glibc-2.34-210-dev@include@bits@types.h.blob  @nix@store@dwsi3wsqpqm0hpzdm9fsxc7q732p9xwi-glibc-2.34-210-dev@include@bits@types@FILE.h.blob  (+41 more)
.ccls-cache/@home@runner@ProgramacionII/: Sesiones@2022-08-09.c  (+12 more)
Laboratorio/: 16-08.c  177685_P2P2B.c  177685_P3P2B.c  177685_P5P2B.c  177685_P6P2B.c  177685_P7P2B.c  23-08.c
Proyecto/: Avance Proyecto Progra 2 - Hamburguesas Don Chuy.docx  ComidaRapida_8-9.docx  ascii-art.ans  main.c  tmain.c
Sesiones/Lista/: CMakeLists.txt  main.c  main2.c
include/: colors.h  list.c  list.h  menu.c  menu.h  movement.h  string.c  string.h
libs/: CMakeLists.txt
(+183 files in other folders)
